# wolfram-cli

./: .gitignore  README.md  pyproject.toml  wolfram_cli.md
.pi/skills/wolfram-cli/: SKILL.md
.pi/skills/wolfram-cli/scripts/: wolfram_cli.py
src/wolfram_cli_tool/: __init__.py  cli.py
